--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -101,6 +101,7 @@ p{
 
 .l-heading{
   font-size: 40px;
+  line-height: 1.2;
 }
 
 
@@ -122,7 +123,7 @@ p{
 color: #fff;
 }
 
-#navbar h1{
+#navbar .logo{
   float: left;
   padding-top: 20px;
 }
@@ -175,7 +176,7 @@ color: #fff;
 /* Home info */
 
 #home-info {
-  height: 400px;
+  height: 450px;
 }
 
 #home-info .info-img {
@@ -238,7 +239,7 @@ color: #fff;
 /* testimonials */
 
 #testimonials{
-  height: 795px;
+  height: 100%;
   background: url('../images/test-bg.jpg') no-repeat
   center center/cover;
   padding-top: 40px;
@@ -256,7 +257,7 @@ color: #fff;
   margin-bottom: 40px;
   border-radius: 10px;
   opacity: 0.9;
-  height: 230px;
+  /* height: 230px; */
   border: 3px solid #333;
  
 }
@@ -272,9 +273,9 @@ color: #fff;
  
 }
 
-.testimonial img{
+/* .testimonial img{
   margin-top: 35px;
-}
+} */
 
 .testimonial p {
  margin-top: 40px;
